调整代码逻辑，处理多栋建筑，模型有问题时添加警告

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 
+list.txt
 results/
+models/
 *~
 *.autosave
 *.a
